--- a/app/src/main/res/layout/each_student_item.xml
+++ b/app/src/main/res/layout/each_student_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/id_each_student_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:layout_weight="1"/>
 
 
@@ -16,6 +17,7 @@
         android:id="@+id/id_each_student_string"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:layout_weight="1"/>
 
 
@@ -24,6 +26,7 @@
         android:id="@+id/id_each_student_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:layout_weight="1"/>
 
 </LinearLayout>
