--- a/app/src/main/res/layout/swipe_refrashable_student_activity.xml
+++ b/app/src/main/res/layout/swipe_refrashable_student_activity.xml
@@ -1,19 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_height="wrap_content"
-android:layout_width="wrap_content"
-android:layout_marginLeft="@dimen/activity_horizontal_margin"
-android:layout_marginRight="@dimen/activity_horizontal_margin"
-android:layout_marginTop="@dimen/activity_vertical_margin"
-android:layout_marginBottom="@dimen/activity_vertical_margin"
-android:id="@+id/id_layout_swipe_refresh"
+<LinearLayout
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-<ListView
-    android:id="@+id/id_swipe_refreshable_listView_student"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"/>
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:text="@string/id"/>
 
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/name"/>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:text="@string/age"/>
+
+    </LinearLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:id="@+id/id_layout_swipe_refresh"
+    >
+
+        <ListView
+            android:id="@+id/id_swipe_refreshable_listView_student"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
